css/style.css
*{
    padding: 0;
    margin: 0;
}
html{
    scroll-behavior: smooth;
}
nav{
    font-family: 'Source Sans Pro', sans-serif;
    margin: 0;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color:  white;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999;
}
.logo{
    text-transform: uppercase;font-weight: bold;font-size: 35px;
}
nav ul{
    list-style: none;
    display: flex;
    text-transform: uppercase;

}
li a{
    margin: 20px;
    color: #132945;
    text-decoration: none;
}
li a:hover{
    font-weight: bold;
}
header{
    background-image: url('../img/bg.jpg');
    background-size: cover;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    
}

header h2{
    color: white;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 75px;
}
.underText{
    color: white;
}
.about-me{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: 'Source Sans Pro', sans-serif;
}

.about-me h2{
    font-size: 50px;
    position: relative;
}
.about-me h2::before{
    content: "";
    position: absolute;
    bottom: 0;
    width: 0%;
    height: 3%;
    background-color: #132945;
    animation: h2-bottom 1s infinite ease-in-out alternate;
}
@keyframes h2-bottom{
    0%{
        width: 0px;
    }
    100%{
        width: 100%;
    }
}
.about-box{
    padding: 50px;
    border-radius: 8px;
    box-shadow: 0px 2px 10px 2px #132945;
    margin: 30px;
}
.projects{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #132945;
    color: white;
    padding: 20px;
}
.projects h2{
    font-size: 50px;
    position: relative;
    font-family: 'Source Sans Pro', sans-serif;
}
.projects h2::before{
    content: "";
    position: absolute;
    bottom: 0;
    width: 0%;
    height: 3%;
    background-color: white;
    animation: h2-bottom 1s infinite ease-in-out alternate;

}
.projects-div{
    display: flex;
    justify-content: center;
    align-items: center;
}
.card{
    /* background-color: rgb(0, 143, 143,0.1); */
    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255,0.3);
    color: black;
    padding: 20px;
    margin: 20px;
    font-family: 'Source Sans Pro', sans-serif;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-height: 300px;
    width: 200px;
}

.proName{
    font-size: 35px;
    color: white;
}
.proLink{
    background: #005eda;
    padding: 10px 20px;
    border-radius: 5px;
    color: white;
    text-decoration: none;
    margin: 10px;
}
.desc{
    color: #88bafc;
}
.education{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: 'Source Sans Pro', sans-serif;
}

.education h2{
    font-size: 50px;
    position: relative;
}
.education h2::before{
    content: "";
    position: absolute;
    bottom: 0;
    width: 0%;
    height: 3%;
    background-color: #132945;
    animation: h2-bottom 1s infinite ease-in-out alternate;
}
.education-box{
    padding: 50px;
    border-radius: 8px;
    box-shadow: 0px 2px 10px 2px #132945;
    margin: 30px;
}
.skills{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #132945;
    color: white;
    padding: 20px;
}
.skills h2{
    font-size: 50px;
    position: relative;
    font-family: 'Source Sans Pro', sans-serif;
}
.skills h2::before{
    content: "";
    position: absolute;
    bottom: 0;
    width: 0%;
    height: 3%;
    background-color: white;
    animation: h2-bottom 1s infinite ease-in-out alternate;

}
.skills-div{
    display: flex;
    justify-content: center;
    align-items: center;
}
.skills-card{
    /* background-color: rgb(0, 143, 143,0.1); */
    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255,0.3);
    color: black;
    padding: 20px;
    margin: 20px;
    font-family: 'Source Sans Pro', sans-serif;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.skill{
    color: white;
}

